--- a/source/administrator/language/en-GB/en-GB.com_bingtranslate.ini
+++ b/source/administrator/language/en-GB/en-GB.com_bingtranslate.ini
@@ -13,6 +13,8 @@ COM_BINGTRANSLATE_FIELD_CLIENT_SECRET="Azure Client Secret"
 COM_BINGTRANSLATE_FIELD_CLIENT_SECRET_DESC=""
 COM_BINGTRANSLATE_FIELD_LOAD_JQUERY="Load jQuery"
 COM_BINGTRANSLATE_FIELD_LOAD_JQUERY_DESC=""
+COM_BINGTRANSLATE_FIELD_BORK="Bork Mode"
+COM_BINGTRANSLATE_FIELD_BORK_DESC="Dummy translations from a Swedish chef"
 COM_BINGTRANSLATE_FIELD_BACKEND_FEED="Backend Feed"
 COM_BINGTRANSLATE_FIELD_BACKEND_FEED_DESC=""
 
