BingTranslate API update using library classes

--- a/source/administrator/language/en-GB/en-GB.com_bingtranslate.ini
+++ b/source/administrator/language/en-GB/en-GB.com_bingtranslate.ini
@@ -7,10 +7,8 @@ COM_BINGTRANSLATE_VIEW_HOME="Home"
 ; Fields
 COM_CONFIG_BASIC_FIELDSET_LABEL="Basic"
 COM_CONFIG_ADVANCED_FIELDSET_LABEL="Advanced"
-COM_BINGTRANSLATE_FIELD_CLIENT_ID="Azure Client ID"
-COM_BINGTRANSLATE_FIELD_CLIENT_ID_DESC=""
-COM_BINGTRANSLATE_FIELD_CLIENT_SECRET="Azure Client Secret"
-COM_BINGTRANSLATE_FIELD_CLIENT_SECRET_DESC=""
+COM_BINGTRANSLATE_FIELD_CLIENT_KEY="Azure Client Key"
+COM_BINGTRANSLATE_FIELD_CLIENT_KEY_DESC=""
 COM_BINGTRANSLATE_FIELD_LOAD_JQUERY="Load jQuery"
 COM_BINGTRANSLATE_FIELD_LOAD_JQUERY_DESC=""
 COM_BINGTRANSLATE_FIELD_BORK="Bork Mode"
